force-app/main/default/objects/RTL_NBO_History__c/RTL_NBO_History__c.object-meta.xml
<CustomObject>
    <label>NBO</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NBOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>