force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_Campaign__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>NBOs</relationshipLabel>
    <relationshipName>NBOs</relationshipName>
    <type>Lookup</type>
</CustomField>