force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Code__c</fullName>
    <description>Campaign Code this NBO is linked to</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>