force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NBO Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>