force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_Channel__c.field-meta.xml
<CustomField>
    <fullName>RTL_Channel__c</fullName>
    <description>Channel which this NBO is offerred e.g. Branch Email SMS DM EDM MIB Outbound Inbound Others</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned Channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>