force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_Contact_Date__c</fullName>
    <description>Date customer was contacted for this NBO</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Date</label>
    <type>Date</type>
</CustomField>