force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer that this NBO is offerred to</description>
    <label>Customer Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Retail Customer, Retail Prospect</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>NBO_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>