force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>RTL_Customer_Segment__c</fullName>
    <formula>RTL_Customer_Name__r.Segment_crm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Segment</label>
    <type>Text</type>
</CustomField>