force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_CXM_Message_Type__c.field-meta.xml
<CustomField>
    <fullName>RTL_CXM_Message_Type__c</fullName>
    <formula>&quot;NBO&quot;</formula>
    <label>CXM Message Type</label>
    <type>Text</type>
</CustomField>