force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_ID_TYPE__c.field-meta.xml
<CustomField>
    <fullName>RTL_ID_TYPE__c</fullName>
    <formula>TEXT(RTL_Customer_Name__r.ID_Type_PE__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Type</label>
    <type>Text</type>
</CustomField>