force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_NBO_Group__c.field-meta.xml
<CustomField>
    <fullName>RTL_NBO_Group__c</fullName>
    <description>Grouping for this NBO</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NBO Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>