force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_NBO_ID__c.field-meta.xml
<CustomField>
    <fullName>RTL_NBO_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ID of this NBO from MIS</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NBO ID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>