force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_NBO_Product_Latest_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_NBO_Product_Latest_Modified_Date__c</fullName>
    <description>Latest modified date for any NBO product(s) linked to this NBO for purging purposes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NBO Product Latest Modified Date</label>
    <type>DateTime</type>
</CustomField>