force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_NBO_SubGroup__c.field-meta.xml
<CustomField>
    <fullName>RTL_NBO_SubGroup__c</fullName>
    <description>Subgroup of this NBO</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NBO SubGroup</label>
    <length>100</length>
    <type>Text</type>
</CustomField>