force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_Number_of_New_NBO__c.field-meta.xml
<CustomField>
    <fullName>RTL_Number_of_New_NBO__c</fullName>
    <label>Number of New NBO</label>
    <summaryFilterItems>
        <field>RTL_NBO_History_Product__c.RTL_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </summaryFilterItems>
    <summaryForeignKey>RTL_NBO_History_Product__c.RTL_Related_NBO__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>