force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_Number_of_Products__c.field-meta.xml
<CustomField>
    <fullName>RTL_Number_of_Products__c</fullName>
    <description>Number of Products in this NBO used for validation purposes. Every NBO must have at least 1 product</description>
    <label>Number of Products</label>
    <summaryForeignKey>RTL_NBO_History_Product__c.RTL_Related_NBO__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>