force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_Product_Branch_Latest_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product_Branch_Latest_Modified_Date__c</fullName>
    <description>This is used to compare the timestamp with customer interaction</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NBO Product Branch Latest Modified Date</label>
    <type>DateTime</type>
</CustomField>