force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_Result_Business__c.field-meta.xml
<CustomField>
    <fullName>RTL_Result_Business__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Center Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>