force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_Smart_Info__c.field-meta.xml
<CustomField>
    <fullName>RTL_Smart_Info__c</fullName>
    <description>Smart Info Link that comes from MIS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NBO Detail Info</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>