force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_TMB_Customer_ID_PE__c.field-meta.xml
<CustomField>
    <fullName>RTL_TMB_Customer_ID_PE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Customer ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>