force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>RTL_Valid_From__c</fullName>
    <description>Date this NBO is valid from</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>