force-app/main/default/objects/RTL_NBO_History__c/fields/RTL_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>RTL_Valid_To__c</fullName>
    <description>Date this NBO is valid to</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>